--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-13",
+  "name": "promptopia",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,20 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.3",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "daisyui": "^2.51.4",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "next": "13.2.4",
+    "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.4",
+    "next": "13.4.5",
+    "next-auth": "^4.22.1",
+    "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "3.3.2"
   }
 }
